--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <link rel="manifest" href="manifest.json">
       <title>Japanese Cheat Sheet for Tourists</title>
    </head>
-   <body class="c2 c16 doc-content">
+   <body >
      <div class="container">
       <h3 class="c15 c2" id="h.75vp8x11b895"><span class="c9 c5">Greetings &amp; Politeness</span></h3>
       <ul class="c7 lst-kix_d2sdqosrsav-0 start">
