--- a/index.html
+++ b/index.html
@@ -6,44 +6,52 @@
       <meta charset="UTF-8">
       <meta name="theme-color" content="#317EFB"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            font-family: Arial, sans-serif;
-            box-sizing: border-box;
-            font-size: 16px; /* Base font size */
-        }
-
-        @media (min-width: 768px) {
-            html, body {
-                font-size: 18px; /* Larger font size for wider screens */
-            }
-        }
-
-        .container {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-        }
-
-        header, footer {
-            text-align: center;
-            padding: 1em;
-            background-color: #f3f3f3;
-            font-size: 1.25em; /* Larger text in header and footer */
-        }
-
-        main {
-            flex: 1;
-            padding: 1em;
-            overflow-y: auto; /* Adds scroll to main content if needed */
-            font-size: 1em; /* Regular text size for main content */
-        }
-    </style>
+       <style>
+           html {
+               width: 100%;
+               height: 100%;
+               box-sizing: border-box;
+           }
+   
+           body {
+               margin: 0;
+               padding: 0;
+               width: calc(100% - 20px); /* Reduce width to account for left margin */
+               height: calc(100% - 20px); /* Reduce height to account for top margin */
+               font-family: Arial, sans-serif;
+               font-size: 16px;
+               margin-top: 20px; /* Top margin */
+               margin-left: 20px; /* Left margin */
+               box-sizing: border-box;
+           }
+   
+           @media (min-width: 768px) {
+               body {
+                   font-size: 18px;
+               }
+           }
+   
+           .container {
+               width: 100%;
+               height: 100%;
+               display: flex;
+               flex-direction: column;
+           }
+   
+           header, footer {
+               text-align: center;
+               padding: 1em;
+               background-color: #f3f3f3;
+               font-size: 1.25em;
+           }
+   
+           main {
+               flex: 1;
+               padding: 1em;
+               overflow-y: auto;
+               font-size: 1em;
+           }
+       </style>
       <link rel="manifest" href="manifest.json">
       <title>Japanese Cheat Sheet for Tourists</title>
    </head>
